# Zappy

./: .gitignore  Makefile  README.md  iafile  map.txt  tt.py
.github/workflows/: mirror.yaml  zappy.yaml
ai/: .gitignore  Makefile  README.md  handle_args.py  handle_packets.py  main.py
ai/src/: encryption.py  game.py  game_start.py  group_init.py  handle_args.py  handle_packets.py  main.py  player.py
client/: .gitignore  CMakeLists.txt  Makefile  README.md  map.txt
client/DDLoader/: DDLoader.hpp
client/Menu/include/: Button.hpp  Menu.hpp  button.hpp  menu.hpp
client/Menu/src/: Button.cpp  Menu.cpp  button.cpp  menu.cpp
client/Network/: Network.cpp  Network.hpp
client/assets/: robot.iqm
client/assets/Mineral/: crystal.iqm
client/assets/food/: food.iqm
client/assets/map/: floor.iqm  platform.iqm  skybox.iqm
client/assets/monster/: egg.iqm  woody.iqm  woodyRun.iqm
client/assets/monster/animations/: iaRun.iqm  monsterDying.iqm  monsterLeftTurn.iqm  monsterRightTurn.iqm  monsterSpawn.iqm  monsterTaking.iqm  monsterWalking.iqm  monster_walking.iqm
client/encapsulation/: Clock.cpp  Cube.cpp  Model.cpp  Mouse.cpp  Music.cpp  Raylibcpp.hpp  Sound.cpp  Text.cpp  Window.cpp  draw.cpp  environment.cpp  model.cpp  text.cpp  window.cpp
client/include/: Camera.hpp  Character.hpp  Core.hpp  Gameplay.hpp  IGraphical.hpp  Map.hpp  Window.hpp  character.hpp  core.hpp  gameplay.hpp  graphical.hpp  ogre.hpp  window.hpp
client/src/: Camera.cpp  Character.cpp  Core.cpp  Gameplay.cpp  Main.cpp  Map.cpp  Window.cpp  character.cpp  core.cpp  gameplay.cpp  graphical.cpp  window.cpp
client/src/Core/: Core.cpp  Core.hpp  Window.cpp  Window.hpp
client/src/Gameplay/: Character.cpp  Character.hpp  Display.cpp  Display.hpp  Egg.cpp  Egg.hpp  Gameplay.cpp  Gameplay.hpp  Inventory.cpp  Inventory.hpp  Map.cpp  Map.hpp
client/src/Menu/: AScreen.cpp  AScreen.hpp  Button.cpp  Button.hpp  Credits.cpp  Credits.hpp  Disconnect.cpp  Disconnect.hpp  Gameover.cpp  Gameover.hpp  IScreen.hpp  Menu.cpp  Menu.hpp  Setting.cpp  Setting.hpp  Tuto.cpp  Tuto.hpp
client/src/Parser/: Parser.cpp  Parser.hpp
install/: raylib_install.sh
sdk/communication/: .gitignore  Makefile  README.md
server/: .gitignore  Makefile  README.md
server/include/: args.h  buffer.h  commands.h  constants.h  graphical.h  objects.h  player.h  resources.h  server.h  tasks.h  types.h  util.h
(+137 files in other folders)
